--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -24,7 +24,7 @@
   min-height: 531px;
   max-height: 100%;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 23px;
   margin-bottom: auto;
   padding: 37px 13px 40px;
 
@@ -34,6 +34,14 @@
   @media (min-width: $tablet-width) {
     width: 510px;
     min-height: 640px;
+    margin-top: 204px;
+    padding: 55px 78px 58px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 649px;
+    margin-top: 90px;
+    padding: 54px 78px 58px;
   }
 }
 
@@ -41,6 +49,11 @@
   position: absolute;
   top: 10px;
   right: 10px;
+
+  @media (min-width: $tablet-width) {
+    top: 21px;
+    right: 21px;
+  }
 }
 
 .modal__button-icon {
@@ -54,6 +67,11 @@
   background-color: transparent;
 
   transition: all 0.3s ease-in-out;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .modal__button-icon svg {
@@ -64,6 +82,11 @@
   transition: all 0.3s ease-in-out;
 
   stroke: $color-main-basic;
+
+  @media (min-width: $tablet-width) {
+    width: 20px;
+    height: 20px;
+  }
 
   &:hover {
     stroke: $color-main-dark;
@@ -82,6 +105,9 @@
 }
 
 .modal__form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 0;
 
   border: none;
